--- a/README
+++ b/README
@@ -62,7 +62,7 @@ To get only tweets from a set of users, use the FollowStream. The following
 would get tweets for user 1, 42 and 8675309
 
 >>> users = [1, 42, 8675309]
->>> with tweetstream.TweetStream("username", "password", users) as stream
+>>> with tweetstream.FollowStream("username", "password", users) as stream
 ...     for tweet in stream:
 ...         print "Got  tweet from:", tweet["user"]["screen_name"]
 
