--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+.. -*- restructuredtext -*-
+
 ##########################################
 tweetstream - Simple twitter streaming API
 ##########################################
